# rust-api-playground

./: Cargo.toml  README.md
migrations/2024-03-19-150600_employees/: up.sql
src/: db.rs  error_handlers.rs  main.rs
src/employees/: mod.rs  model.rs  routes.rs
