[package]
name = "employee"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "4.5"
actix-rt = "2.9"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
diesel = { version = "2.1", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.1"
env_logger = "0.11"
lazy_static = "1.4"
listenfd = "1.0.1"
serde = "1.0"
serde_json = "1.0"
r2d2 = "0.8"
uuid = { version = "1.8", features = ["serde", "v4"] }
